# headtail

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: build-linux.sh  build-windows.sh  wix-install.wxs
src/: args.cpp  args.h  err.cpp  err.h  process.cpp  process.h
src/i18n/: en.cpp  i18n.cpp  i18n.h  zh.cpp
src/utils/: cast.cpp  cast.h  cmd.cpp  cmd.h  time.cpp  time.h
